@@ -16,6 +16,7 @@
     </permission>
     <permission name="opengever.repository: Unlock Reference Prefix" acquire="True">
       <role name="Manager" />
+      <role name="Administrator" />
     </permission>
   </permissions>
 </rolemap>
